--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,15 @@
-body {background-color: powderblue;}
-h1 {color:orange;
+body {background-color: #0d1117;}
+h1 {color:#0d1117;
     font-size: 50px;
-    background-color: purple;
+    background-color: #f78166;
     text-align: center;}
 
 canvas {
   margin:auto;
+}
+
+img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
