--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,11 @@
+*{
+  box-sizing: border-box;
+}
+
+
 body {background-color: #0d1117;}
-h1 {color:#0d1117;
+h1 {
+    color:#0d1117;
     font-size: 50px;
     background-color: #f78166;
     text-align: center;}
@@ -12,4 +18,54 @@ img{
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+p{
+  color: #565d74;
+  margin-bottom: 100px;
+  margin-top: 100px;
+}
+
+section{
+  display: grid;
+  place-items: center;
+  align-items: center;
+  min-height: 30vh;
+}
+
+.card
+{
+  opacity: 0;
+  transition: 1000ms;
+}
+
+.card.show
+{
+  opacity: 1;
+}
+
+.navBar a{
+  display: inline-block;
+  color: #565d74;
+  text-decoration: none;
+  font-size: 1.6rem;
+  padding: .7em;
+}
+
+.navBar a:hover{
+  color: #f78166;
+}
+
+.navBar li{
+  display: inline;
+}
+
+.navBar ul{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.main-nav{
+  text-align: right;
 }
