--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,50 @@
 *{
   box-sizing: border-box;
 }
+/* These control the headers on each page */
+.main-nav{
+  text-align: right;
+}
+
+.navBar ul{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.navBar li{
+  display: inline;
+}
+
+.navBar a{
+  display: inline-block;
+  color: #565d74;
+  text-decoration: none;
+  font-size: 1.6rem;
+  padding: .7em;
+}
+
+.navBar a:hover{
+  color: #f78166;
+}
 
 
+/* This controls the sytling for the body */
 body {background-color: #0d1117;}
+
+section{
+  display: grid;
+  place-items: center;
+  align-items: center;
+  min-height: 30vh;
+}
+
+p{
+  color: #565d74;
+  margin-bottom: 100px;
+  margin-top: 100px;
+}
+
 h1 {
     color:#0d1117;
     font-size: 50px;
@@ -20,19 +61,9 @@ img{
   margin-right: auto;
 }
 
-p{
-  color: #565d74;
-  margin-bottom: 100px;
-  margin-top: 100px;
-}
 
-section{
-  display: grid;
-  place-items: center;
-  align-items: center;
-  min-height: 30vh;
-}
 
+/* These control the fading effect for each section on the homepage */
 .card
 {
   opacity: 0;
@@ -42,30 +73,4 @@ section{
 .card.show
 {
   opacity: 1;
-}
-
-.navBar a{
-  display: inline-block;
-  color: #565d74;
-  text-decoration: none;
-  font-size: 1.6rem;
-  padding: .7em;
-}
-
-.navBar a:hover{
-  color: #f78166;
-}
-
-.navBar li{
-  display: inline;
-}
-
-.navBar ul{
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-.main-nav{
-  text-align: right;
 }
