--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,20 @@
 }
 /* These control the headers on each page */
 .main-nav{
-  text-align: right;
+  text-align: center;
+}
+
+#lejoopFourier{
+  position: sticky;
+  overflow-x: hidden;
+  top: 0;
+  z-index: -1;
 }
 
 #enterSite{
   font-size: 2rem;
   padding: 0;
+  text-align: center;
 }
 
 .navBar ul{
@@ -49,27 +57,21 @@
 
 /* This controls the sytling for the body */
 body {background-color: #0d1117;}
-#welcomeScreen {margin: 0; margin-top:  1%;}
 
 section{
   display: grid;
   place-items: center;
   align-items: center;
-  min-height: 30vh;
 }
 
 #portraitSection{
-  display: grid;
-  place-items: center;
-  align-items: center;
-  min-height: 15vh;
+  padding-top: 100px;
+  display: flex;
+  flex-direction: column;
+  background-color: #0d1117;
+  height: 100vh;
 }
 
-p{
-  color: #565d74;
-  margin-bottom: 100px;
-  margin-top: 100px;
-}
 
 #aboutMeParagraph{
   color: #565d74;
@@ -106,7 +108,7 @@ img{
 .card
 {
   opacity: 0;
-  transition: 1000ms;
+  transition: 800ms;
 }
 
 .card.show
