--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,6 @@
 *{
   box-sizing: border-box;
 }
-/* These control the headers on each page */
-.main-nav{
-  text-align: center;
-}
 
 #lejoopFourier{
   position: sticky;
@@ -13,32 +9,12 @@
   z-index: -1;
 }
 
-#enterSite{
-  font-size: 2rem;
-  padding: 0;
-  text-align: center;
-}
-
-.navBar ul{
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-.navBar li{
-  display: inline;
-}
-
 .navBar a{
   display: inline-block;
   color: #565d74;
   text-decoration: none;
   font-size: 1.6rem;
   padding: .7em;
-}
-
-.navBar a:hover{
-  color: #f78166;
 }
 
 #GitHub,#LinkedIn {
@@ -62,16 +38,15 @@ strong{
 body {background-color: #0d1117;}
 
 section{
-  display: grid;
-  place-items: center;
   align-items: center;
+  margin-top: 50px;
+  background-color: #0d1117;
+  height: 100vh;
 }
 
 #portraitSection{
-  padding-top: 100px;
   display: flex;
   flex-direction: column;
-  background-color: #0d1117;
   height: 100vh;
 }
 
@@ -88,7 +63,14 @@ h1 {
     font-size: 50px;
     background-color: #f78166;
     text-align: center;
-    margin-bottom: 0px;}
+    margin-bottom: 0px;
+  }
+
+#projects{
+    width: auto;
+    height: auto;
+    padding-top: 10px;
+  }
 
 h2 {
   color:#565d74;
