--- a/css/style.css
+++ b/css/style.css
@@ -40,11 +40,14 @@ body {background-color: #0d1117;}
 section{
   align-items: center;
   margin-top: 50px;
-  background-color: #0d1117;
+  background-color: rbga(13,17,23,.94);
+  backdrop-filter: blur(8px);
   height: 100vh;
 }
 
 #portraitSection{
+  border-radius: 200px;
+  padding-top: 45px;
   display: flex;
   flex-direction: column;
   height: 100vh;
@@ -90,7 +93,7 @@ img{
 
 
 /* These control the fading effect for each section on the homepage */
-.card
+/* .card
 {
   opacity: 0;
   transition: 800ms;
@@ -99,4 +102,5 @@ img{
 .card.show
 {
   opacity: 1;
-}
+  backdrop-filter: invert(80%);
+} */
