--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,10 @@
 }
 
 #portrait{
+  border-radius: 30px;
   display: inline;
-  width: 250px;
   height: 250px;
+  width: 250px;
 }
 
 strong{
@@ -28,14 +29,6 @@ strong{
 }
 
 body {background-color: #0d1117;}
-
-/* section{
-  align-items: center;
-  margin-top: 50px;
-  background-color: rbga(13,17,23,.94);
-  backdrop-filter: blur(8px);
-  height: 100vh;
-} */
 
 #lejoopFourier{
   height: 100vh;
