--- a/css/style.css
+++ b/css/style.css
@@ -17,15 +17,15 @@ html{
 #GitHub,#LinkedIn {
   margin: 10px;
   display: inline;
-  height: 40px;
-  width: 40px;
+  height: 2.5rem;
+  width: 2.5rem;
 }
 
 #portrait{
-  border-radius: 30px;
+  border-radius: 2rem;
   display: inline;
-  height: 250px;
-  width: 250px;
+  height: 16rem;
+  width: 16rem;
 }
 
 strong{
@@ -48,28 +48,29 @@ body {background-color: #0d1117;}
   background-color: rbga(13,17,23,.94);
   backdrop-filter: blur(8px);
   -webkit-backdrop-filter: blur(8px);
-  border-radius: 200px;
+  border-radius: 12.5rem;
   display: flex;
   flex-direction: column;
   height: 100vh;
-  margin-top: 50px;
-  padding-top: 45px;
+  margin-top: 3.13rem;
+  padding-top: 2.7rem;
 }
 
 
 #aboutMeParagraph{
   color: #565d74;
   margin-bottom: 0px;
-  margin-top: 10px;
+  margin-top: .625rem;
   text-align: center;
 }
 
 h1 {
     color:#0d1117;
-    font-size: 50px;
+    font-size: 3.13rem;
     background-color: #f78166;
     text-align: center;
-    margin-bottom: 0px;
+    margin-bottom: 0rem;
+    margin-top: 1.5rem;
   }
 
 #projects{
@@ -81,7 +82,7 @@ h1 {
 h2 {
   color:#565d74;
   text-align: center;
-  margin: 2px;}  
+  margin: .1rem;}  
 
 canvas {
   margin:auto;
